--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,7 +8,13 @@
 }
 .text{
     text-align: center;
+    color:rgb(56, 44, 28);
 }
 .comp{
     margin-left: 50px;
+}
+.banner{
+    width: 100%;
+    height: 320px;
+    margin: 10px;
 }
