--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,6 +1,7 @@
 .navcomp{
     display: flex;
     margin-top: 70px;
+
 }
 .img{
     width: 100px;
@@ -33,11 +34,24 @@
     padding-right: 10px;
 }
 .counter{
-    margin-left: 10px;
+    color: rgb(194, 185, 185);
 }
-
 .timer{
     height:40px;
     width: 40px;
     padding-left: 10px;
+}
+.btn{
+    margin-left:auto;
+    margin-right: 15px;
+}
+.contain{
+    padding-top: 30px;
+}
+.text{
+    font-size: 15px;
+    line-height: 8px;
+}
+.add{
+    padding: 10px;
 }
