--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -55,3 +55,13 @@
 .add{
     padding: 10px;
 }
+.midbanner{
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.coronaBanner{
+    margin: 10px;
+}
